# cvkit

./: .clang-format  .clang-tidy  .clangd  .cmake-format  .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  conanfile.py
.github/workflows/: ci.yml
assets/labels/: coco80.txt
assets/models/: README.md
benchmark/: CMakeLists.txt  image_benchmark.cpp
cmake/: add_library.cmake  add_library_macro.cmake  compile_options.cmake  cvkitConfig.cmake.in  detect_environment.cmake  fetch_submodule.cmake  tool_chain.cmake
demo/: CMakeLists.txt  object_detect.cpp  video_read.cpp
docs/: ARCHITECTURE.md  CODING_STYLE.md  STATUS.md
examples/: CMakeLists.txt  classification.cpp  example_graph_utils.cpp  example_graph_utils.h  example_infer_utils.h  example_opencv_utils.cpp  example_opencv_utils.h  face_detection.cpp  facemesh.cpp  pipeline.cpp  pipeline_media_utils.cpp  pipeline_media_utils.h  pipeline_support.cpp  pipeline_support.h  pose.cpp  promptable_segmentation.cpp  promptable_segmentation_support.cpp  promptable_segmentation_support.h  segmentation.cpp  video_gpu_detection.cpp
include/cvkit/core/: types.h
include/cvkit/image/: ops.h
include/cvkit/infer/: backend.h  debug.h  device.h  model.h  session.h  task.h  task_io.h  task_schema.h  tensor_io.h
include/cvkit/infer/tasks/: classification.h  detection.h  face_detection.h  facemesh.h  pose.h  promptable_segmentation.h  segmentation.h
include/cvkit/media/: options.h  source.h  writer.h
scripts/: clean.sh  dev_build.sh  export_scrfd_onnx.sh  probe_media_gpu.sh  probe_media_writer.sh  probe_video_gpu_detection.sh
scripts/ci/: all.sh  common.sh  cvkit_local.sh  cvkit_package.sh
src/: CMakeLists.txt
src/background_model/interface/: ibackground_model.h
src/background_model/src/: background_model.cpp  background_model.h  ipost_process.h  ipre_process.h  post_process.cpp  post_process.h  post_process_gpu.cu  post_process_gpu.h  pre_process.cpp  pre_process.h  pre_process_gpu.cu  pre_process_gpu.h
src/background_model/src/vibe/: IViBe.h  ViBe.cpp  ViBe.h  ViBeCvParallelFor.cpp  ViBeCvParallelFor.h  ViBeGpu.cu  ViBeGpu.h  cudaVibeKernel.cu  cudaVibeKernel.h
src/core/: CMakeLists.txt  types.cpp
src/cv_cuda/interface/: cuda_common.h  cuda_kenerl_wrapper.h
src/cv_cuda/src/: cuda_kenerl_wrapper.cu  cuda_opencv_kenerl.cu  cuda_opencv_kenerl.h
src/deploy/yolov8/: yolov8.cpp  yolov8.h  yolov8_onnx.cpp  yolov8_onnx.h  yolov8_utils.cpp  yolov8_utils.h
src/image/: CMakeLists.txt  ops.cpp
src/img/: img_process.cpp  img_process.h
src/infer/: CMakeLists.txt  executor.cpp  executor.h  model.cpp  registry.cpp  session.cpp  tile_runner.cpp  tile_runner.h
src/infer/backends/: backend_session.h
src/infer/backends/onnxruntime/: ort_session.cpp  ort_session.h
src/infer/backends/tensorrt/: trt_session.cpp  trt_session.h
src/infer/graph/: graph.cpp  graph.h  packet.h
src/infer/tasks/: task_pipeline.h
src/infer/tasks/classification/: classification_pipeline.cpp  classification_pipeline.h
src/infer/tasks/detection/: detection_pipeline.cpp  detection_pipeline.h
src/infer/tasks/detection/yolo/: yolo_postprocess.cpp  yolo_postprocess.h  yolo_preprocess.h  yolo_preprocess_cpu.cpp  yolo_preprocess_cpu.h  yolo_preprocess_cuda.cpp  yolo_preprocess_cuda.h  yolo_preprocess_cuda_kernel.cu  yolo_preprocess_cuda_kernel.h
src/infer/tasks/face_detection/: face_detection_pipeline.cpp  face_detection_pipeline.h
src/infer/tasks/facemesh/: facemesh_pipeline.cpp  facemesh_pipeline.h
src/infer/tasks/pose/: pose_pipeline.cpp  pose_pipeline.h
src/infer/tasks/promptable_segmentation/: promptable_preprocess_cuda.cpp  promptable_preprocess_cuda.h  promptable_preprocess_cuda_kernel.cu  promptable_preprocess_cuda_kernel.h  promptable_segmentation_pipeline.cpp  promptable_segmentation_pipeline.h
src/infer/tasks/segmentation/: segmentation_pipeline.cpp  segmentation_pipeline.h
src/infer/utils/: bbox.cpp  bbox.h  cuda_image_sampling.cuh  debug.cpp  image_preprocess.cpp  image_preprocess.h  image_value_utils.cpp  image_value_utils.h  labels.cpp  labels.h  nms.cpp  nms.h  opencv_utils.cpp  opencv_utils.h  task_input_utils.h  tensor_io.cpp  tensor_layout.cpp  tensor_layout.h  tensor_value_utils.cpp  tensor_value_utils.h
src/media/: CMakeLists.txt  source.cpp  writer.cpp
src/video/: camera.cpp  camera.h  camera_wrapper.hpp  semaphore.hpp  video.cpp  video.h  video_reader.cpp  video_reader.h  video_writer.cpp  video_writer.h
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: aggregate.cpp  main.cpp
tests/: CMakeLists.txt  test_core.cpp  test_infer.cpp  test_media.cpp  test_media_infer.cpp
